# Group-Chat-Application

./: .gitignore  APPLICATION_LAYER.md  Compilation.md  README.md  authentication.c  authentication.h  client  client.h  data_transfer.c  data_transfer.h  file_io.c  file_io.h  group_chat  group_dashboard.c  group_dashboard.h  group_interaction.h  groups.txt  main.c  makefile  messaging.h  registration.c  registration.h  server  server.c  server.h  server_stub.c  users.txt  wsl_config.md
v1/: CMakeLists.txt  README.md  authentication.c  authentication.h  file_io.c  file_io.h  group_interaction.c  group_interaction.h  main.c  messaging.c  messaging.h  registration.c  registration.h
v2/: authentication.c  authentication.h  client.c  data_transfer.c  group_dashboard.c  group_dashboard.h  group_interaction.c  group_interaction.h  makefile  messaging.c  messaging.h  registration.c  registration.h  server.c  server_stub.c
v3/: APPLICATION_LAYER.md  README.md  authentication.c  client.c  client.h  client_stub.c  group_dashboard.c  group_interaction.c  messaging.c  messaging.h  registration.c  server.c  server.h  server_stub.c
v4/: .gitignore  client.c  client.h  client_stub.c  data_transfer.h  file_io.c  group_interaction.c  memberships.txt  messaging.h
v5/: APPLICATION_LAYER.md  README.md  authentication.h  client_stub.c  data_transfer.h  file_io.c  makefile  server.c  server_stub.c
v6/: README.md  data_transfer.c  file_io.h  group_interaction.h  registration.h  server_stub.c
v7/: APPLICATION_LAYER.md  README.md  authentication.c  authentication.h  client.c  file_io.h  (+12 more)
